--- a/lab1.html
+++ b/lab1.html
@@ -113,17 +113,17 @@
                 </tr>
                 <tr>
                     <td class="text"><b>KIIT University</b> (2022 - 2026) <br>
-                        B.Tech in Computer Science and Engineering, CGPA: 8.27 (4th Semester), Bhubaneswar, Odisha
+                        B.Tech in Computer Science and Engineering, CGPA: 8.27 (4th Semester)
                     </td>
                 </tr>
                 <tr>
                     <td class="text"><b>Gyan Bharati School</b> (2021 - 2022) <br>
-                        12th CBSE - 85.8%, Saket, New Delhi
+                        12th CBSE - 85.8%
                     </td>
                 </tr>
                 <tr>
                     <td class="text"><b>Gyan Bharati School</b> (2019 - 2020) <br>
-                        10th CBSE - 84.8%, Saket, New Delhi
+                        10th CBSE - 84.8%
                     </td>
                 </tr>
             </table>
